terceira comit